-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 1.3.1
-
None
-
Linux, VMware, Ubuntu, 1GB system ram
-
214679d65ba4ebd2d2be0b177f5eeac7df6d32aa, a1fed931c45c81566fd3d806abcb39b7c7bffabd,8951d66168e9f95f0eb499a83c7f4ad1c504045e,196d7b0cf4bc456b195393f36c1a092c8532208f,1c69b97ca6d1bbe5419308049848c11abc80d5d5
Git support in QtCreator currently has a default timeout of 30 seconds. Currently, I'm running into this timeout all the time while doing some development in a VMware image with limited memory. When the timeout is reached, QtCreator kills the git process, which usually leaves a .git/index.lock around, meaning I have to manually go in and remove it before I can use git again.
The other VC integrations do not have any kind of configurable command timeout, so why does git?
(On a side note, I have tried increasing the timeout limit to 300 seconds, but it doesn't work)